fix console redirect with root url

--- a/server/src-rsr/console.html
+++ b/server/src-rsr/console.html
@@ -4,7 +4,7 @@
     <script>
      window.__env = {
        consoleMode: "server",
-       urlPrefix: "/{{urlRoot}}console",
+       urlPrefix: "{{consoleRoot}}",
        isAccessKeySet: {{isAccessKeySet}}
      };
     </script>
