template the disable_telemetry variable in console html

--- a/cli/assets/v1.0-alpha/console.html
+++ b/cli/assets/v1.0-alpha/console.html
@@ -10,7 +10,8 @@
        dataApiVersion: {{.dataApiVersion}},
        accessKey: {{.accessKey}},
        urlPrefix: "/",
-       consoleMode: "cli"
+       consoleMode: "cli",
+       disableTelemetry: {{.disableTelemetry}}
      };
     </script>
   </head>
