add consolePath in console.html template

--- a/server/src-rsr/console.html
+++ b/server/src-rsr/console.html
@@ -5,6 +5,7 @@
      window.__env = {
        consoleMode: "server",
        urlPrefix: "/console",
+       consolePath: "{{consolePath}}",
        isAccessKeySet: {{isAccessKeySet}}
      };
     </script>
