add uuid to console

--- a/cli/assets/unversioned/console.html
+++ b/cli/assets/unversioned/console.html
@@ -11,6 +11,7 @@
        accessKey: {{.accessKey}},
        urlPrefix: "/",
        consoleMode: "cli",
+       uuid: {{.uuid}},
        disableTelemetry: {{.disableTelemetry}}
      };
     </script>
