--- a/cli/assets/v1.0-alpha/console.html
+++ b/cli/assets/v1.0-alpha/console.html
@@ -11,6 +11,7 @@
        accessKey: {{.accessKey}},
        urlPrefix: "/",
        consoleMode: "cli",
+       cliUUID: {{.cliUUID}},
        disableTelemetry: {{.disableTelemetry}}
      };
     </script>
