--- a/cli/assets/v1.0/console.html
+++ b/cli/assets/v1.0/console.html
@@ -11,7 +11,7 @@
        accessKey: {{.accessKey}},
        urlPrefix: "/",
        consoleMode: "cli",
-       uuid: {{.uuid}},
+       cliUUID: {{.cliUUID}},
        disableTelemetry: {{.disableTelemetry}}
      };
     </script>
