cli: change disableTelemetry to enableTelemetry

--- a/cli/assets/unversioned/console.html
+++ b/cli/assets/unversioned/console.html
@@ -12,7 +12,7 @@
        urlPrefix: "/",
        consoleMode: "cli",
        cliUUID: {{.cliUUID}},
-       disableTelemetry: {{.disableTelemetry}}
+       enableTelemetry: {{.enableTelemetry}}
      };
     </script>
   </head>
