--- a/server/src-rsr/console.html
+++ b/server/src-rsr/console.html
@@ -7,7 +7,7 @@
        urlPrefix: "/console",
        consolePath: "{{consolePath}}",
        isAccessKeySet: {{isAccessKeySet}},
-       disableTelemetry: {{disableTelemetry}}
+       enableTelemetry: {{enableTelemetry}}
      };
     </script>
   </head>
