add anonymous telemetry (#1401)

--- a/cli/assets/unversioned/console.html
+++ b/cli/assets/unversioned/console.html
@@ -10,7 +10,9 @@
        dataApiVersion: {{.dataApiVersion}},
        accessKey: {{.accessKey}},
        urlPrefix: "/",
-       consoleMode: "cli"
+       consoleMode: "cli",
+       cliUUID: {{.cliUUID}},
+       enableTelemetry: {{.enableTelemetry}}
      };
     </script>
   </head>
