--- a/server/src-rsr/console.html
+++ b/server/src-rsr/console.html
@@ -6,7 +6,8 @@
        consoleMode: "server",
        urlPrefix: "/console",
        consolePath: "{{consolePath}}",
-       isAccessKeySet: {{isAccessKeySet}},
+       isAccessKeySet: {{isAdminSecretSet}},
+       isAdminSecretSet: {{isAdminSecretSet}},
        enableTelemetry: {{enableTelemetry}}
      };
     </script>
