1) Change 'access key' to 'admin secret' in cli 2) Support both --access-key and --admin-secret key flags for admin secret in cli commands

--- a/cli/assets/unversioned/console.html
+++ b/cli/assets/unversioned/console.html
@@ -8,7 +8,8 @@
        cliVersion: {{.cliVersion}},
        dataApiUrl: {{.dataApiUrl}},
        dataApiVersion: {{.dataApiVersion}},
-       accessKey: {{.accessKey}},
+       adminSecret: {{.adminSecret}},
+       accessKey: {{.adminSecret}},
        urlPrefix: "/",
        consoleMode: "cli",
        cliUUID: {{.cliUUID}},
