--- a/cli/assets/v1.0/console.html
+++ b/cli/assets/v1.0/console.html
@@ -8,7 +8,8 @@
        cliVersion: {{.cliVersion}},
        dataApiUrl: {{.dataApiUrl}},
        dataApiVersion: {{.dataApiVersion}},
-       accessKey: {{.accessKey}},
+       adminSecret: {{.adminSecret}},
+       accessKey: {{.adminSecret}},
        urlPrefix: "/",
        consoleMode: "cli",
        cliUUID: {{.cliUUID}},
