--- a/community/sample-apps/vuetify-vuex-todo-graphql/public/index.html
+++ b/community/sample-apps/vuetify-vuex-todo-graphql/public/index.html
@@ -6,7 +6,7 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>vuetify-todo-pwa</title>
+    <title>Vuetify + Vuex + Hasura GraphQL Todo App</title>
     <meta name="description" content="A todo application built with Vuetify">
   </head>
   <body>
