update robots.txt, graphiql urls

--- a/community/learn/graphql-tutorials/backend-services/graphiql/static/index.html
+++ b/community/learn/graphql-tutorials/backend-services/graphiql/static/index.html
@@ -14,8 +14,8 @@
     <meta name="description" content="An online version of GraphiQL. Manage headers easily. Test your GraphQL servers" />
     <script>
       window.__env = {
-        graphqlEndpoint: 'http://backend.graphql-tutorials.org/v1alpha1/graphql',
-        callbackUrl: 'http://graphiql.graphql-tutorials.org/callback',
+        graphqlEndpoint: 'https://learn.hasura.io/graphql',
+        callbackUrl: 'https://learn.hasura.io/graphql/graphiql/callback',
         headers: '',
         variables: '',
         query: ''
