--- a/community/learn/graphql-tutorials/backend-services/graphiql/static/index.html
+++ b/community/learn/graphql-tutorials/backend-services/graphiql/static/index.html
@@ -57,9 +57,9 @@
     <div id="content" class="mainContent"></div>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
 
-    <link rel="stylesheet" href="/dist/main.css" charset="UTF-8"/>
-    <script src="/dist/vendor.js" charset="UTF-8"></script>
-    <script src="/dist/main.js" charset="UTF-8"></script>
+    <link rel="stylesheet" href="https://storage.googleapis.com/graphql-engine-cdn.hasura.io/learn-hasura/graphiql/main.css" charset="UTF-8"/>
+    <script src="https://storage.googleapis.com/graphql-engine-cdn.hasura.io/learn-hasura/graphiql/vendor.js" charset="UTF-8"></script>
+    <script src="https://storage.googleapis.com/graphql-engine-cdn.hasura.io/learn-hasura/graphiql/main.js" charset="UTF-8"></script>
 
   </body>
 </html>
