--- a/server/src-rsr/console.html
+++ b/server/src-rsr/console.html
@@ -49,52 +49,58 @@
     <div id="content" class="mainContent"></div>
 
     <script>
-      loadResource = (url) => {
-        if (url.endsWith('svg')) {
-          linkElem = document.createElement('link');
-          linkElem.rel = 'icon';
-          linkElem.type = 'image/svg+xml';
-          linkElem.href = url;
-          document.head.append(linkElem);
-        }
-        if (url.endsWith('css.gz')) {
-          linkElem = document.createElement('link');
-          linkElem.rel = 'stylesheet';
-          linkElem.charset = 'UTF-8';
-          linkElem.href = url;
-          document.body.append(linkElem);
-        }
-        if (url.endsWith('js.gz')) {
-          scriptElem = document.createElement('script');
-          scriptElem.charset = 'UTF-8';
-          scriptElem.src = url;
-          document.body.append(scriptElem);
-        }
-      };
-      if (navigator.onLine === false || window.__env.cdnAssets === false) {
-        console.log('offline/cdnAssets=false, loading assets from static-dir');
-        if (window.__env.consoleMode === 'server') {
-          window.__env.assetsPath =
-            window.location.pathname.slice(
-              0, window.location.pathname.lastIndexOf(window.__env.consolePath)
-            ) + '/console/assets';
-        } else {
-          window.__env.assetsPath = '/assets';
-        }
-      }
-      prependSlash = (str) => str === '' ? '' : '/' + str;
-      loadResource(window.__env.assetsPath + '/common/css/font-awesome.min.css.gz');
-      loadResource(window.__env.assetsPath + '/common/img/hasura_icon_green.svg');
-      loadResource(window.__env.assetsPath + prependSlash(window.__env.assetsVersion) + '/main.css.gz');
-      loadResource(window.__env.assetsPath + prependSlash(window.__env.assetsVersion) + '/main.js.gz');
-      loadResource(window.__env.assetsPath + prependSlash(window.__env.assetsVersion) + '/vendor.js.gz');
+     const assetsPathReadyEvent = new Event('assetsPathReadyEvent');
+     const loadIcon = (url) => {
+       linkElem = document.createElement('link');
+       linkElem.rel = 'icon';
+       linkElem.type = 'image/svg+xml';
+       linkElem.href = url;
+       document.head.append(linkElem);
+     };
+     const loadCSS = (url) => {
+       linkElem = document.createElement('link');
+       linkElem.rel = 'stylesheet';
+       linkElem.charset = 'UTF-8';
+       linkElem.href = url;
+       document.body.append(linkElem);
+     };
+     const loadScript = (url) => {
+       scriptElem = document.createElement('script');
+       scriptElem.charset = 'UTF-8';
+       scriptElem.src = url;
+       document.body.append(scriptElem);
+     };
+     const prependSlash = (str) => str === '' ? '' : '/' + str;
+     document.body.addEventListener('assetsPathReadyEvent', (e) => {
+       loadCSS(window.__env.assetsPath + '/common/css/font-awesome.min.css.gz');
+       loadIcon(window.__env.assetsPath + '/common/img/hasura_icon_green.svg');
+       loadCSS(window.__env.assetsPath + prependSlash(window.__env.assetsVersion) + '/main.css.gz');
+       loadScript(window.__env.assetsPath + prependSlash(window.__env.assetsVersion) + '/main.js.gz');
+       loadScript(window.__env.assetsPath + prependSlash(window.__env.assetsVersion) + '/vendor.js.gz');
 
-      console.log(window.__env.assetsPath + '/common/css/font-awesome.min.css.gz');
-      console.log(window.__env.assetsPath + '/common/img/hasura_icon_green.svg');
-      console.log(window.__env.assetsPath + prependSlash(window.__env.assetsVersion) + '/main.css.gz');
-      console.log(window.__env.assetsPath + prependSlash(window.__env.assetsVersion) + '/main.js.gz');
-      console.log(window.__env.assetsPath + prependSlash(window.__env.assetsVersion) + '/vendor.js.gz');
+       console.log(window.__env.assetsPath + '/common/css/font-awesome.min.css.gz');
+       console.log(window.__env.assetsPath + '/common/img/hasura_icon_green.svg');
+       console.log(window.__env.assetsPath + prependSlash(window.__env.assetsVersion) + '/main.css.gz');
+       console.log(window.__env.assetsPath + prependSlash(window.__env.assetsVersion) + '/main.js.gz');
+       console.log(window.__env.assetsPath + prependSlash(window.__env.assetsVersion) + '/vendor.js.gz');
+     }, false);
+
+     // if browser is offline or cdnAssets is set to false, load assets from
+     // server itself.
+     if (navigator.onLine === false || window.__env.cdnAssets === false) {
+       console.log('offline/cdnAssets=false, loading assets from static-dir');
+       if (window.__env.consoleMode === 'server') {
+         window.__env.assetsPath =
+           window.location.pathname.slice(
+             0, window.location.pathname.lastIndexOf(window.__env.consolePath)
+           ) + '/console/assets';
+         // dispatch the event to load the assets now
+         document.body.dispatchEvent(assetsPathReadyEvent);
+       } else {
+         window.__env.assetsPath = '/assets';
+       }
+     }
+
     </script>
-
   </body>
 </html>
