change the way how assets are pushed to ci

--- a/server/src-rsr/console.html
+++ b/server/src-rsr/console.html
@@ -79,6 +79,7 @@
        loadScript(window.__env.versionedAssetsPath + '/main.js.gz');
        loadScript(window.__env.versionedAssetsPath + '/vendor.js.gz');
 
+       // remove this before merging.
        console.log(window.__env.assetsPath + '/common/css/font-awesome.min.css.gz');
        console.log(window.__env.assetsPath + '/common/img/hasura_icon_green.svg');
        console.log(window.__env.versionedAssetsPath + '/main.css.gz');
