--- a/community/sample-apps/tic-tac-toe-react/client/public/index.html
+++ b/community/sample-apps/tic-tac-toe-react/client/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <!--
@@ -33,7 +33,7 @@
       rel="stylesheet"
       crossorigin="anonymous"
     >
-    <title>React App</title>
+    <title>Tic Tac Toe</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
