cli: update console html and version assets generation for cli

--- a/cli/assets/v1.0/console.html
+++ b/cli/assets/v1.0/console.html
@@ -63,9 +63,9 @@
 
     {{ else }}
 
-    <link rel="stylesheet" href="https://storage.googleapis.com/hasura-graphql-engine/console/{{.assetsVersion}}/main.css" charset="UTF-8"/>
-    <script src="https://storage.googleapis.com/hasura-graphql-engine/console/{{.assetsVersion}}/vendor.js" charset="UTF-8"></script>
-    <script src="https://storage.googleapis.com/hasura-graphql-engine/console/{{.assetsVersion}}/main.js" charset="UTF-8"></script>
+    <link rel="stylesheet" href="https://graphql-engine-cdn.hasura.io/console/assets/{{.assetsVersion}}/main.css.gz" charset="UTF-8"/>
+    <script src="https://graphql-engine-cdn.hasura.io/console/assets/{{.assetsVersion}}/vendor.js.gz" charset="UTF-8"></script>
+    <script src="https://graphql-engine-cdn.hasura.io/console/assets/{{.assetsVersion}}/main.js.gz" charset="UTF-8"></script>
 
    {{ end }}
 
