--- a/server/src-rsr/console.html
+++ b/server/src-rsr/console.html
@@ -1,6 +1,5 @@
 <html lang="en-us">
   <head>
-    <link rel="icon" type="image/svg+xml" href="https://graphql-engine-cdn.hasura.io/img/hasura_icon_green.svg" />
     <script>
      window.__env = {
        consoleMode: "server",
@@ -8,8 +7,12 @@
        consolePath: "{{consolePath}}",
        isAccessKeySet: {{isAdminSecretSet}},
        isAdminSecretSet: {{isAdminSecretSet}},
-       enableTelemetry: {{enableTelemetry}}
+       enableTelemetry: {{enableTelemetry}},
+       assetsPath: "https://graphql-engine-cdn.hasura.io/console/assets",
+       assetsVersion: "{{assetsVersion}}",
+       cdnAssets: {{cdnAssets}},
      };
+     window.__env.versionedAssetsPath = window.__env.assetsPath;
     </script>
   </head>
   <body>
@@ -45,9 +48,65 @@
       </div>
     </div>
     <div id="content" class="mainContent"></div>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
-    <link rel="stylesheet" href="{{consoleAssetsLoc}}/main.css" charset="UTF-8"/>
-    <script src="{{consoleAssetsLoc}}/vendor.js" charset="UTF-8"></script>
-    <script src="{{consoleAssetsLoc}}/main.js" charset="UTF-8"></script>
+
+    <script>
+     const assetsPathReadyEvent = new Event('assetsPathReadyEvent');
+     const loadIcon = (url) => {
+       linkElem = document.createElement('link');
+       linkElem.rel = 'icon';
+       linkElem.type = 'image/svg+xml';
+       linkElem.href = url;
+       document.head.append(linkElem);
+     };
+     const loadCSS = (url) => {
+       linkElem = document.createElement('link');
+       linkElem.rel = 'stylesheet';
+       linkElem.charset = 'UTF-8';
+       linkElem.href = url;
+       document.body.append(linkElem);
+     };
+     const loadScript = (url) => {
+       scriptElem = document.createElement('script');
+       scriptElem.charset = 'UTF-8';
+       scriptElem.src = url;
+       document.body.append(scriptElem);
+     };
+     const prependSlash = (str) => str === '' ? '' : '/' + str;
+     document.body.addEventListener('assetsPathReadyEvent', (e) => {
+       loadCSS(window.__env.assetsPath + '/common/css/font-awesome.min.css.gz');
+       loadIcon(window.__env.assetsPath + '/common/img/hasura_icon_green.svg');
+       loadCSS(window.__env.versionedAssetsPath + '/main.css.gz');
+       loadScript(window.__env.versionedAssetsPath + '/main.js.gz');
+       loadScript(window.__env.versionedAssetsPath + '/vendor.js.gz');
+
+       // remove this before merging.
+       console.log(window.__env.assetsPath + '/common/css/font-awesome.min.css.gz');
+       console.log(window.__env.assetsPath + '/common/img/hasura_icon_green.svg');
+       console.log(window.__env.versionedAssetsPath + '/main.css.gz');
+       console.log(window.__env.versionedAssetsPath + '/main.js.gz');
+       console.log(window.__env.versionedAssetsPath + '/vendor.js.gz');
+     }, false);
+
+     // if cdnAssets is set to false, load assets from server instead of cdn
+     if (window.__env.cdnAssets === false) {
+       console.log('cdnAssets=false, loading assets from static-dir');
+       window.__env.assetsPath =
+         window.location.pathname.slice(
+           0, window.location.pathname.lastIndexOf(window.__env.consolePath)
+         ) + '/console/assets';
+       // set the path to get versioned assets from server
+       window.__env.versionedAssetsPath = window.__env.assetsPath + '/versioned';
+       // dispatch the event to load the assets now
+       document.body.dispatchEvent(assetsPathReadyEvent);
+
+     // otherwise load from cdn itself
+     } else {
+       console.log('cdnAssets=true, loading assets from cdn');
+       // set the path (cdn-based) to get assets from
+       window.__env.versionedAssetsPath = window.__env.assetsPath + prependSlash(window.__env.assetsVersion);
+       // fire the event
+       document.body.dispatchEvent(assetsPathReadyEvent);
+     }
+    </script>
   </body>
 </html>
