--- a/server/src-rsr/console.html
+++ b/server/src-rsr/console.html
@@ -50,7 +50,7 @@
     <div id="content" class="mainContent"></div>
 
     <script>
-     const assetsPathReadyEvent = new Event('assetsPathReadyEvent');
+     // helper functions
      const loadIcon = (url) => {
        linkElem = document.createElement('link');
        linkElem.rel = 'icon';
@@ -72,41 +72,30 @@
        document.body.append(scriptElem);
      };
      const prependSlash = (str) => str === '' ? '' : '/' + str;
-     document.body.addEventListener('assetsPathReadyEvent', (e) => {
+     const loadAssets = () => {
        loadCSS(window.__env.assetsPath + '/common/css/font-awesome.min.css.gz');
        loadIcon(window.__env.assetsPath + '/common/img/hasura_icon_green.svg');
        loadCSS(window.__env.versionedAssetsPath + '/main.css.gz');
        loadScript(window.__env.versionedAssetsPath + '/main.js.gz');
        loadScript(window.__env.versionedAssetsPath + '/vendor.js.gz');
-
-       // remove this before merging.
-       console.log(window.__env.assetsPath + '/common/css/font-awesome.min.css.gz');
-       console.log(window.__env.assetsPath + '/common/img/hasura_icon_green.svg');
-       console.log(window.__env.versionedAssetsPath + '/main.css.gz');
-       console.log(window.__env.versionedAssetsPath + '/main.js.gz');
-       console.log(window.__env.versionedAssetsPath + '/vendor.js.gz');
-     }, false);
+     };
 
      // if cdnAssets is set to false, load assets from server instead of cdn
      if (window.__env.cdnAssets === false) {
-       console.log('cdnAssets=false, loading assets from static-dir');
        window.__env.assetsPath =
          window.location.pathname.slice(
            0, window.location.pathname.lastIndexOf(window.__env.consolePath)
          ) + '/console/assets';
        // set the path to get versioned assets from server
        window.__env.versionedAssetsPath = window.__env.assetsPath + '/versioned';
-       // dispatch the event to load the assets now
-       document.body.dispatchEvent(assetsPathReadyEvent);
 
      // otherwise load from cdn itself
      } else {
-       console.log('cdnAssets=true, loading assets from cdn');
        // set the path (cdn-based) to get assets from
        window.__env.versionedAssetsPath = window.__env.assetsPath + prependSlash(window.__env.assetsVersion);
-       // fire the event
-       document.body.dispatchEvent(assetsPathReadyEvent);
      }
+     // load the assets now
+     loadAssets();
     </script>
   </body>
 </html>
