--- a/server/src-rsr/console.html
+++ b/server/src-rsr/console.html
@@ -54,7 +54,7 @@
      const loadIcon = (url) => {
        linkElem = document.createElement('link');
        linkElem.rel = 'icon';
-       linkElem.type = 'image/svg+xml';
+       linkElem.type = 'image/png';
        linkElem.href = url;
        document.head.append(linkElem);
      };
@@ -74,7 +74,7 @@
      const prependSlash = (str) => str === '' ? '' : '/' + str;
      const loadAssets = () => {
        loadCSS(window.__env.assetsPath + '/common/css/font-awesome.min.css.gz');
-       loadIcon(window.__env.assetsPath + '/common/img/hasura_icon_green.svg');
+       loadIcon(window.__env.assetsPath + '/common/img/favicon_green.png');
        loadCSS(window.__env.versionedAssetsPath + '/main.css.gz');
        loadScript(window.__env.versionedAssetsPath + '/main.js.gz');
        loadScript(window.__env.versionedAssetsPath + '/vendor.js.gz');
