--- a/cli/assets/v1.0/console.html
+++ b/cli/assets/v1.0/console.html
@@ -16,7 +16,8 @@
         urlPrefix: "/",
         consoleMode: "cli",
         cliUUID: {{.cliUUID}},
-        enableTelemetry: {{.enableTelemetry}}
+        enableTelemetry: {{.enableTelemetry}},
+        assetsVersion: {{.assetsVersion}},
       };
     </script>
   </head>
